Fixing pop-up container move with scroll by setting position to fixed. Updated z-index to make sure Element floats above (most) other elements

--- a/src/pop-up.css
+++ b/src/pop-up.css
@@ -9,7 +9,8 @@
 }
 
 #pop-up-container {
-  position: absolute;
+  z-index: 80;
+  position: fixed;
   top: 0;
   right: 0;
   height: 100vh;
